--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <a href="login.html" class="hover-link"><i class="fa-solid fa-user-tie"></i> Log in</a>
         </div>
         <div class="overlay"></div>
+        <video autoplay muted loop plays-inline class="video">
+          <source src="assets/video1.mp4"type="video/mp4">
+        </video>
     </header>
     <nav>
         <div class="menu-bar">
