--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
         <div class="pass">Forgot Password?</div>
         <input type="submit" value="Login">
         <div class="signup_link">
-          Don't have your accout yet? <br><a href="#">Contact ETE Office</a>
+          Don't have your account yet? <br><a href="#">Contact ETE Office</a>
         </div>
       </form>
     </div>
