--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="overlay"></div>
         <video autoplay muted loop plays-inline class="video">
-          <source src="assets/video1.mp4"type="video/mp4">
+          <!-- <source src="assets/video1.mp4"type="video/mp4"> -->
         </video>
     </header>
     <nav>
