--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
 <body>
+    <!-- Navigation Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <img src="/assets/ete logo black.png" style="height: 100%; width: auto;">
@@ -37,24 +38,26 @@
         <!-- <div class="collapse navbar-collapse" id="navbarCollapse"> -->
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Faculties</a>
-                <a href="project.html" class="nav-item nav-link">Alumni</a>
+                <a href="#About" class="nav-item nav-link">About</a>
+                <a href="Faculties.html" class="nav-item nav-link">Faculties</a>
+                <a href="https://alumni-ete-cuet.netlify.app/?fbclid=IwAR0HCp0F7QXw-GWn8Y3F_O574PxSl4XH7M_TFkXJ1yWGPM8cQ-c4IrA9_eY" class="nav-item nav-link">Alumni</a>
+                <a href="contact.html" class="nav-item nav-link">Photo Gallery</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" >Photo gallery</a>
+                    <a href="#" class="nav-link dropdown-toggle" >More</a>
                     <div class="dropdown-menu fade-up m-0">
-                        <a href="feature.html" class="dropdown-item">Feature</a>
-                        <a href="quote.html" class="dropdown-item">Free Quote</a>
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="feature.html" class="dropdown-item">Offered Degrees</a>
+                        <a href="quote.html" class="dropdown-item">Notices</a>
+                        <a href="team.html" class="dropdown-item">Our Research</a>
+                        <a href="testimonial.html" class="dropdown-item">Contact</a>
+                        <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Sign in<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="login.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Sign in<i class="fa fa-arrow-right ms-3"></i></a>
         <!-- </div> -->
     </nav>
+
+    <!-- Header start -->
     <div class="owl-carousel-item position-relative">
         <img class="img-fluid" src="assets/bg.jpg" alt="">
         <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(53, 53, 53, .7);">
@@ -71,7 +74,8 @@
             </div>
         </div>
     </div>
-    <section class="about_section m-4">
+    <!-- About start -->
+    <section  id="About" class="about_section m-4">
         <div class="container  ">
           <div class="row">
             <div class="col-md-6">
@@ -84,7 +88,7 @@
                 <p>
                     Today, we are at the peak of the information technology age, and communication engineering plays a vital role in today's rapidly changing world. In this prospect, CUET has launched Department of Electronics and Telecommunication Engineering (ETE) in the year 2012. The vision of this department is to make great contribution by producing efficient and resourceful engineers with research and development capabilities.
                 </p>
-                <a href="">
+                <a href="about.html">
                   Read More
                 </a>
               </div>
@@ -97,6 +101,7 @@
           </div>
         </div>
       </section>
+
     <!-- Faculty Start -->
     <div class="container-xxl py-5">
         <div class="container">
@@ -104,41 +109,56 @@
                 <h1 class="display-5 mb-5">Our Faculties</h1>
             </div>
             <div class="row g-4">
+              <div class="col-md-6 col-lg-4 wow fadeInUp" >
+                <div class="team-item">
+                  <div class="overflow-hidden position-relative">
+                      <img class="img-fluid" src="assets/Azad sir.jpeg" alt="">
+                      <div class="team-social">
+                          <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
+                          <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
+                          <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
+                      </div>
+                  </div>
+                  <div class="p-4 text-center border border-5 border-light border-top-0">
+                    <h4 class="mb-3">Dr. Md. Azad Hossain</h4>
+                    <p>Head of the Depertment</p>
+                    <a class="fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                </div>
+              </div>
+              </div>
                 <div class="col-md-6 col-lg-4 wow fadeInUp" >
-                    <div class="service-item">
-                        <div class="overflow-hidden">
-                            <img class="img-fluid" src="assets/Azad sir.jpeg" alt="">
-                        </div>
-                        <div class="p-4 text-center border border-5 border-light border-top-0">
-                            <h4 class="mb-3">Dr. Md. Azad Hossain</h4>
-                            <!-- <p>Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam.</p> -->
-                            <a class="fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                  <div class="team-item">
+                    <div class="overflow-hidden position-relative">
+                        <img class="img-fluid" src="assets/ful.jpg" alt="">
+                        <div class="team-social">
+                            <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
+                    <div class="p-4 text-center border border-5 border-light border-top-0">
+                      <h4 class="mb-3">Dr. Md. Jahedul Islam</h4>
+                      <p>Proffesor</p>
+                      <a class="fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                  </div>
+                </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInUp" >
-                    <div class="service-item">
-                        <div class="overflow-hidden">
-                            <img class="img-fluid" src="assets/Adiba.jpg" alt="">
-                        </div>
-                        <div class="p-4 text-center border border-5 border-light border-top-0">
-                            <h4 class="mb-3">Adiba Sabreen</h4>
-                            <!-- <p>Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam.</p> -->
-                            <a class="fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                  <div class="team-item">
+                    <div class="overflow-hidden position-relative">
+                        <img class="img-fluid" src="assets/ful.jpg" alt="">
+                        <div class="team-social">
+                            <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
+                    <div class="p-4 text-center border border-5 border-light border-top-0">
+                      <h4 class="mb-3">Dr. Md. Saiful Islam</h4>
+                      <p>Assistant Proffesor</p>
+                      <a class="fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                  </div>
                 </div>
-                <div class="col-md-6 col-lg-4 wow fadeInUp">
-                    <div class="service-item">
-                        <div class="overflow-hidden">
-                            <img class="img-fluid" src="assets/Sayeem.jpg" alt="">
-                        </div>
-                        <div class="p-4 text-center border border-5 border-light border-top-0">
-                            <h4 class="mb-3">Sayeem Mohammad</h4>
-                            <!-- <p>Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam.</p> -->
-                            <a class="fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -199,7 +219,7 @@
         </div>
       </div>
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
@@ -216,11 +236,10 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h4 class="text-light mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="Faculties.html">Our Faculties</a>
+                    <a class="btn btn-link" href="https://cuet.ac.bd">CUET Website</a>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h4 class="text-light mb-4">Our Location</h4>
