--- a/Faculties.html
+++ b/Faculties.html
@@ -43,14 +43,14 @@
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="Faculties.html" class="nav-item nav-link active">Faculties</a>
                 <a href="https://alumni-ete-cuet.netlify.app/?fbclid=IwAR0HCp0F7QXw-GWn8Y3F_O574PxSl4XH7M_TFkXJ1yWGPM8cQ-c4IrA9_eY" class="nav-item nav-link">Alumni</a>
-                <a href="contact.html" class="nav-item nav-link">Photo Gallery</a>
+                <a href="photo.html" class="nav-item nav-link">Photo Gallery</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" >More</a>
                     <div class="dropdown-menu fade-up m-0">
-                        <a href="feature.html" class="dropdown-item">Offered Degrees</a>
-                        <a href="quote.html" class="dropdown-item">Notices</a>
-                        <a href="team.html" class="dropdown-item">Our Research</a>
-                        <a href="testimonial.html" class="dropdown-item">Contact</a>
+                        <a href="#" class="dropdown-item">Offered Degrees</a>
+                        <a href="index.html#Notice" class="dropdown-item">Notices</a>
+                        <a href="#" class="dropdown-item">Our Research</a>
+                        <a href="contact.html" class="dropdown-item">Contact</a>
                         <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
                     </div>
                 </div>
