--- a/about.html
+++ b/about.html
@@ -46,10 +46,10 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" >More</a>
                     <div class="dropdown-menu fade-up m-0">
-                        <a href="feature.html" class="dropdown-item">Offered Degrees</a>
-                        <a href="quote.html" class="dropdown-item">Notices</a>
-                        <a href="team.html" class="dropdown-item">Our Research</a>
-                        <a href="testimonial.html" class="dropdown-item">Contact</a>
+                        <a href="#" class="dropdown-item">Offered Degrees</a>
+                        <a href="index.html#Notice" class="dropdown-item">Notices</a>
+                        <a href="#" class="dropdown-item">Our Research</a>
+                        <a href="contact.html" class="dropdown-item">Contact</a>
                         <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
                     </div>
                 </div>
