--- a/login.html
+++ b/login.html
@@ -30,33 +30,34 @@
         <link rel="stylesheet" href="css/loginstyle.css">
   </head>
   <body>
-    <!-- Navigation Start -->
+    <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-      <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-          <img src="/assets/ete logo black.png" style="height: 100%; width: auto;">
-          <!-- <h2 class="m-0 text-primary m-4">Dept. of ETE</h2> -->
-      </a>
-      <!-- <div class="collapse navbar-collapse" id="navbarCollapse"> -->
-          <div class="navbar-nav ms-auto p-4 p-lg-0">
-              <a href="index.html" class="nav-item nav-link">Home</a>
-              <a href="about.html" class="nav-item nav-link">About</a>
-              <a href="service.html" class="nav-item nav-link">Faculties</a>
-              <a href="https://alumni-ete-cuet.netlify.app/?fbclid=IwAR0HCp0F7QXw-GWn8Y3F_O574PxSl4XH7M_TFkXJ1yWGPM8cQ-c4IrA9_eY" class="nav-item nav-link">Alumni</a>
-              <a href="contact.html" class="nav-item nav-link">Photo Gallery</a>
-              <div class="nav-item dropdown">
-                  <a href="#" class="nav-link dropdown-toggle" >More</a>
-                  <div class="dropdown-menu fade-up m-0">
-                      <a href="feature.html" class="dropdown-item">Offered Degrees</a>
-                      <a href="quote.html" class="dropdown-item">Notices</a>
-                      <a href="team.html" class="dropdown-item">Our Research</a>
-                      <a href="testimonial.html" class="dropdown-item">Contact</a>
-                      <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
-                  </div>
-              </div>
-          </div>
-          <a href="login.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Sign in<i class="fa fa-arrow-down ms-3"></i></a>
-      <!-- </div> -->
-  </nav>
+        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+            <img src="/assets/ete logo black.png" style="height: 100%; width: auto;">
+            <!-- <h2 class="m-0 text-primary m-4">Dept. of ETE</h2> -->
+        </a>
+        <!-- <div class="collapse navbar-collapse" id="navbarCollapse"> -->
+            <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <a href="index.html" class="nav-item nav-link">Home</a>
+                <a href="about.html" class="nav-item nav-link">About</a>
+                <a href="Faculties.html" class="nav-item nav-link">Faculties</a>
+                <a href="https://alumni-ete-cuet.netlify.app/?fbclid=IwAR0HCp0F7QXw-GWn8Y3F_O574PxSl4XH7M_TFkXJ1yWGPM8cQ-c4IrA9_eY" class="nav-item nav-link">Alumni</a>
+                <a href="photo.html" class="nav-item nav-link">Photo Gallery</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" >More</a>
+                    <div class="dropdown-menu fade-up m-0">
+                        <a href="#" class="dropdown-item">Offered Degrees</a>
+                        <a href="index.html#Notice" class="dropdown-item">Notices</a>
+                        <a href="#" class="dropdown-item">Our Research</a>
+                        <a href="contact.html" class="dropdown-item">Contact</a>
+                        <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
+                    </div>
+                </div>
+            </div>
+            <a href="login.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Sign in<i class="fa fa-arrow-right ms-3"></i></a>
+        <!-- </div> -->
+    </nav>
+    <!-- Navbar End -->
 
     <!-- login start -->
     <div class="container d-flex align-items-center justify-content-center pt-5">
