--- a/photo.html
+++ b/photo.html
@@ -82,7 +82,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="section-title text-center">
-                <h1 class="display-5 mb-5">Our Photos</h1>
+                <h1 class="display-5 mb-5">Photo Gallery</h1>
             </div>
             <div class="row mt-n2 wow fadeInUp">
                 <div class="col-12 text-center">
@@ -104,8 +104,8 @@
                             </div>
                         </div>
                         <div class="border border-5 border-light border-top-0 p-4">
-                            <p class="text-primary fw-medium mb-2">Academic</p>
-                            <h5 class="lh-base mb-0">Wooden Furniture Manufacturing And Remodeling</a>
+                            <!-- <p class="text-primary fw-medium mb-2">Academic</p> -->
+                            <h5 class="lh-base mb-0 text-center">Pic1</a>
                         </div>
                     </div>
                 </div>
@@ -119,8 +119,8 @@
                             </div>
                         </div>
                         <div class="border border-5 border-light border-top-0 p-4">
-                            <p class="text-primary fw-medium mb-2">Extra-Curriculam</p>
-                            <h5 class="lh-base mb-0">Wooden Furniture Manufacturing And Remodeling</a>
+                            <!-- <p class="text-primary fw-medium mb-2">Extra-Curriculam</p> -->
+                            <h5 class="lh-base mb-0 text-center">Pic2</a>
                         </div>
                     </div>
                 </div>
@@ -134,8 +134,8 @@
                             </div>
                         </div>
                         <div class="border border-5 border-light border-top-0 p-4">
-                            <p class="text-primary fw-medium mb-2">Academic</p>
-                            <h5 class="lh-base mb-0">Wooden Furniture Manufacturing And Remodeling</a>
+                            <!-- <p class="text-primary fw-medium mb-2">Academic</p> -->
+                            <h5 class="lh-base mb-0 text-center">Pic3</a>
                         </div>
                     </div>
                 </div>
@@ -149,8 +149,8 @@
                             </div>
                         </div>
                         <div class="border border-5 border-light border-top-0 p-4">
-                            <p class="text-primary fw-medium mb-2">Extra-Curriculam</p>
-                            <h5 class="lh-base mb-0">Wooden Furniture Manufacturing And Remodeling</a>
+                            <!-- <p class="text-primary fw-medium mb-2">Extra-Curriculam</p> -->
+                            <h5 class="lh-base mb-0 text-center">Pic4</a>
                         </div>
                     </div>
                 </div>
@@ -164,8 +164,8 @@
                             </div>
                         </div>
                         <div class="border border-5 border-light border-top-0 p-4">
-                            <p class="text-primary fw-medium mb-2">Academic</p>
-                            <h5 class="lh-base mb-0">Wooden Furniture Manufacturing And Remodeling</a>
+                            <!-- <p class="text-primary fw-medium mb-2">Academic</p> -->
+                            <h5 class="lh-base mb-0 text-center">Pic5</a>
                         </div>
                     </div>
                 </div>
@@ -179,8 +179,8 @@
                             </div>
                         </div>
                         <div class="border border-5 border-light border-top-0 p-4">
-                            <p class="text-primary fw-medium mb-2">Extra-Curriculam</p>
-                            <h5 class="lh-base mb-0">Wooden Furniture Manufacturing And Remodeling</a>
+                            <!-- <p class="text-primary fw-medium mb-2">Extra-Curriculam</p> -->
+                            <h5 class="lh-base mb-0 text-center">Pic6</a>
                         </div>
                     </div>
                 </div>
